--- a/ticTacToe.css
+++ b/ticTacToe.css
@@ -169,4 +169,8 @@ body {
         height: 30%;
         width: 30%;
     }
+    .reset-container{
+        width: 80%;
+        margin-top: 20px;
+    }
  }
