--- a/ticTacToe.css
+++ b/ticTacToe.css
@@ -108,7 +108,10 @@ body {
         transform: translate(-50%, -50%) rotate(225deg);
     }
 }
-
+.outer-container p{
+    margin-top: 10px;
+    font-variant: small-caps;
+}
 .player1 {
     color: rgb(158, 8, 8);
 }
@@ -195,7 +198,6 @@ body {
     }
     .outer-container{
         width: 50%;
-        border: 1px solid red;
     }
     .reset-container {
         width: 80%;
