--- a/ticTacToe.css
+++ b/ticTacToe.css
@@ -139,11 +139,12 @@ body {
 .reset-button:hover {
     font-size: 26px;
 }
-
-#mobile-reset-btn {
+.mobile-reset-btn{
     display: none;
 }
-
+.disp-responsive{
+    display: none;
+}
 .player2 {
     color: blue;
 }
@@ -177,7 +178,20 @@ body {
 .hide {
     display: none;
 }
-
+/* #trophy1,#trophy2{
+    color: goldenrod;
+    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    visibility: hidden;
+    background-color: whitesmoke;
+    padding: 6px 2px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 4px rgb(79, 79, 79);
+}
+.disp-ib{
+    visibility: visible;
+} */
 /* media query */
 @media screen and (max-width:450px) {
 
@@ -209,8 +223,10 @@ body {
     }
 
     #mobile-reset-btn {
-        display: block;
         width: 80%;
         margin: 10px auto 2px;
+    }
+    .disp-responsive{
+        display: block;
     }
 }
