--- a/ticTacToe.css
+++ b/ticTacToe.css
@@ -232,4 +232,9 @@ body {
     .disp-responsive{
         display: block;
     }
+    .my-fa-trophy{
+        width: 20px;
+        height: 20px;
+        font-size: 16px;
+    }
 }
