--- a/ticTacToe.css
+++ b/ticTacToe.css
@@ -194,11 +194,36 @@ body {
 .disp-ib{
     display: inline-block;
 }
-#close-btn{
+.close-btn{
     color: red;
     font-size: 22px;
     background-color: inherit;
     border: none;
+    font-weight: bold;
+}
+
+.form-style{
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+}
+.form-style input{
+    min-width: 180px;
+    outline: none;
+    border: 1px solid black;
+}
+.form-style input:focus{
+    box-shadow: none;
+    outline: none !important;
+    border: 1px solid green !important;
+}
+.my-modal{
+    background-color: rgba(255, 255, 255, 0.358);
+    backdrop-filter: blur(10px);
+}
+.my-modal-dialog{
+    background-color: rgba(255, 255, 255, 0.358);
+    box-shadow: 0px 0px 5px black;
 }
 /* media query */
 @media screen and (max-width:450px) {
